# web_sample

./: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: react.yml  rust.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/src/: configuration.rs  lib.rs  main.rs  telemetry.rs
backend/tests/: health_check.rs
frontend/: .dockerignore  package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.test.tsx  index.tsx
src/: core.rs  index.tsx  lib.rs  main.rs  telemetry.rs
tests/: health_check.rs
