[package]
name = "anisoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "anisoc"

[dependencies]
actix-web = "4.0.0-beta.9"

[dev-dependencies]
actix-rt = "2.0.2"
reqwest = "0.11"
tokio = "1"
